--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -435,5 +435,6 @@ img {
     --bs-accordion-active-bg: var(--lightgray-2);
     .accordion-button {
         box-shadow: none;
+        color: var(--bs-black);
     }
 }
