--- a/style.css
+++ b/style.css
@@ -11618,7 +11618,8 @@ img {
   --bs-accordion-inner-border-radius: 0;
   --bs-accordion-active-bg: var(--lightgray-2); }
   .accordion.accordion .accordion-button {
-    box-shadow: none; }
+    box-shadow: none;
+    color: var(--bs-black); }
 
 @media (min-width: 1500px) {
   .container {
