--- a/style.css
+++ b/style.css
@@ -12492,6 +12492,9 @@ h5, .h5 {
       width: 100%;
       height: 100%; }
 
+.offcanvas--technical-details.offcanvas--technical-details {
+  max-width: 900px; }
+
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
 /*-----------------------------------------------------------------------------------*/
