--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -118,4 +118,9 @@
 
 .offcanvas--technical-details.offcanvas--technical-details {
     max-width: 900px;
+    .wp-block-buttons {
+        > .wp-block-button {
+            flex-grow: 1;
+        }
+    }
 }
