--- a/style.css
+++ b/style.css
@@ -12494,8 +12494,9 @@ h5, .h5 {
 
 .offcanvas--technical-details.offcanvas--technical-details {
   max-width: 900px; }
-  .offcanvas--technical-details.offcanvas--technical-details .wp-block-buttons > .wp-block-button {
-    flex: 1 0 0%; }
+  @media (min-width: 576px) {
+    .offcanvas--technical-details.offcanvas--technical-details .wp-block-buttons > .wp-block-button {
+      flex-grow: 1; } }
 
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
