--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -33,15 +33,15 @@ a {
 }
 
 h1 {
-    font-size: 4.25rem;
+    font-size: 68px;
     @include responsive(xs-sm) {
-        font-size: 3.5rem;
+        font-size: 56px;
     }
     @include responsive(xs) {
-        font-size: 3rem;
+        font-size: 48px;
     }
     @include responsive(mobile) {
-        font-size: 2.5rem;
+        font-size: 40px;
     }
 }
 h2,
@@ -88,31 +88,110 @@ h5 {
 }
 .fs-48 {
     font-size: 48px;
+    @include responsive(xs-sm) {
+        font-size: 36px;
+    }
+    @include responsive(xs) {
+        font-size: 32px;
+    }
+    @include responsive(mobile) {
+        font-size: 28px;
+    }
 }
 .fs-35 {
     font-size: 35px;
+    @include responsive(xs-sm) {
+        font-size: 30px;
+    }
+    @include responsive(xs) {
+        font-size: 28px;
+    }
+    @include responsive(mobile) {
+        font-size: 24px;
+    }
 }
 
 .fs-32 {
     font-size: 32px;
+    @include responsive(xs-sm) {
+        font-size: 28px;
+    }
+    @include responsive(xs) {
+        font-size: 26px;
+    }
+    @include responsive(mobile) {
+        font-size: 22px;
+    }
 }
 .fs-26 {
     font-size: 26px;
+    @include responsive(xs-sm) {
+        font-size: 24px;
+    }
+    @include responsive(xs) {
+        font-size: 22px;
+    }
+    @include responsive(mobile) {
+        font-size: 20px;
+    }
 }
 .fs-25 {
     font-size: 25;
+    @include responsive(xs-sm) {
+        font-size: 23px;
+    }
+    @include responsive(xs) {
+        font-size: 21px;
+    }
+    @include responsive(mobile) {
+        font-size: 19px;
+    }
 }
 .fs-24 {
     font-size: 24px;
-}
-.fs-22 {
-    font-size: 22px;
+    @include responsive(xs-sm) {
+        font-size: 22px;
+    }
+    @include responsive(xs) {
+        font-size: 20px;
+    }
+    @include responsive(mobile) {
+        font-size: 18px;
+    }
 }
 .fs-23 {
     font-size: 23px;
+    @include responsive(xs-sm) {
+        font-size: 21px;
+    }
+    @include responsive(xs) {
+        font-size: 19px;
+    }
+    @include responsive(mobile) {
+        font-size: 17px;
+    }
 }
+.fs-22 {
+    font-size: 22px;
+    @include responsive(xs-sm) {
+        font-size: 21px;
+    }
+    @include responsive(xs) {
+        font-size: 19px;
+    }
+    @include responsive(mobile) {
+        font-size: 17px;
+    }
+}
+
 .fs-18 {
     font-size: 18px;
+    @include responsive(xs) {
+        font-size: 17px;
+    }
+    @include responsive(mobile) {
+        font-size: 16px;
+    }
 }
 .fs-16 {
     font-size: 16px;
