--- a/style.css
+++ b/style.css
@@ -12025,7 +12025,7 @@ h1, .h1 {
       font-size: 48px; } }
   @media screen and (max-width: 575px) {
     h1, .h1 {
-      font-size: 2.5rem; } }
+      font-size: 40px; } }
 
 h2, .h2,
 .h2 {
