--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -313,7 +313,7 @@ img {
         }
     }
 }
-.wp-block-button__link.wp-block-button__link {
+.wp-block-button__link.wp-block-button__link, .wp-block-read-more {
     font-size: inherit;
     padding: 18px 25px;
     font-size: 15px;
