--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -314,7 +314,7 @@ img {
     }
 }
 .wp-block-button__link.wp-block-button__link,
-.wp-block-read-more {
+.wp-block-read-more.wp-block-read-more {
     font-size: inherit;
     padding: 18px 25px;
     font-size: 15px;
