--- a/style.css
+++ b/style.css
@@ -11636,7 +11636,8 @@ img {
   .nav-buttons.nav-buttons li a {
     background-color: transparent;
     padding: 13px;
-    border: 1px solid; }
+    border: 1px solid;
+    font-size: 15px; }
   .nav-buttons.nav-buttons li.current-menu-item a {
     width: 100%;
     background-color: var(--bs-black);
