--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -459,10 +459,11 @@ img {
             padding: 13px;
             border: 1px solid;
             font-size: 15px;
+            width: 100%;
+            text-align: center;
         }
         &.current-menu-item {
             a {
-                width: 100%;
                 background-color: var(--bs-black);
                 color: var(--bs-white);
             }
