--- a/style.css
+++ b/style.css
@@ -11640,6 +11640,8 @@ img {
     font-size: 15px;
     width: 100%;
     text-align: center; }
+    .nav-buttons.nav-buttons li a:hover, .nav-buttons.nav-buttons li a:active, .nav-buttons.nav-buttons li a:focus {
+      background-color: var(); }
   .nav-buttons.nav-buttons li.current-menu-item a {
     background-color: var(--bs-black);
     color: var(--bs-white); }
