--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -333,6 +333,7 @@ img {
 .wp-load-more__button.wp-load-more__button {
     background-color: var(--maroon);
     color: var(--bs-white);
+    border-radius: 0;
 }
 .wp-block-embed__wrapper {
     position: relative;
