--- a/style.css
+++ b/style.css
@@ -11706,6 +11706,11 @@ img {
     -o-transform: translateY(-50%);
     transform: translateY(-50%); }
 
+.accordion--custom {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; }
+
 .accordion--item {
   overflow: hidden;
   position: relative;
