--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -542,6 +542,7 @@ img {
     overflow: hidden;
     position: relative;
     @include transition(500ms);
+    width: 100%;
     * {
         @include transition(500ms);
     }
