--- a/style.css
+++ b/style.css
@@ -11718,7 +11718,8 @@ img {
   -moz-transition: 500ms;
   -ms-transition: 500ms;
   -o-transition: 500ms;
-  transition: 500ms; }
+  transition: 500ms;
+  width: 100%; }
   .accordion--item * {
     -webkit-transition: 500ms;
     -moz-transition: 500ms;
