--- a/style.css
+++ b/style.css
@@ -11708,7 +11708,7 @@ img {
 
 .accordion--custom {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 20px; }
 
 .accordion--item {
