--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -573,6 +573,7 @@ img {
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+    margin-bottom: 0 !important;
 }
 .accordion--content {
     > div {
