--- a/style.css
+++ b/style.css
@@ -11744,7 +11744,8 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  cursor: pointer; }
+  cursor: pointer;
+  margin-bottom: 0 !important; }
 
 .accordion--content > div {
   padding-top: 20px;
