--- a/style.css
+++ b/style.css
@@ -12550,7 +12550,9 @@ h5, .h5 {
 /* Header & Footer
 /*-----------------------------------------------------------------------------------*/
 #masthead {
-  z-index: 9999; }
+  z-index: 9999;
+  position: sticky;
+  top: var(--admin-bar-height); }
   #masthead.header-transparent {
     position: absolute;
     left: 0;
