--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -3,7 +3,7 @@
     position: sticky;
     top: var(--admin-bar-height);
     &.header-transparent {
-        position: absolute;
+        position: fixed;
         left: 0;
         right: 0;
         top: var(--admin-bar-height);
