--- a/style.css
+++ b/style.css
@@ -12565,6 +12565,9 @@ h5, .h5 {
   #masthead.header-default + #main {
     margin-top: 0; }
 
+body.sticky--header #masthead {
+  background-color: var(--bs-white); }
+
 .menu-burger {
   --burger-width: 40px;
   --burger-height: 25px;
