--- a/style.css
+++ b/style.css
@@ -12649,10 +12649,15 @@ body.sticky--header #masthead {
   z-index: 999;
   left: 0;
   right: 0;
-  box-shadow: 0px -5px 16px #0000001F; }
+  box-shadow: 0px -5px 16px #0000001f; }
 
 .delear-details .logo-box img {
   max-width: 140px; }
+
+.dealer--locator--holder .dealer--locator #wpsl-search-wrap form {
+  display: flex; }
+  .dealer--locator--holder .dealer--locator #wpsl-search-wrap form > div {
+    float: none; }
 
 .swiper-slider-holder .swiper-pagination-holder {
   position: absolute;
