--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -38,6 +38,9 @@
 
 .dealer--locator--holder {
     .dealer--locator {
+        .wpsl-search {
+            background-color: transparent;
+        }
         #wpsl-search-wrap form {
             display: flex;
             > div {
