--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -53,7 +53,7 @@
                     }
                 }
             }
-            .wpsl-wrap {
+            #wpsl-gmap {
                 background-color: var(--wp--preset--color--lightgray-2);
             }
         }
