--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -45,6 +45,8 @@
             .wpsl-search {
                 padding-left: 12px;
                 padding-right: 12px;
+                margin-left: auto;
+                margin-right: auto;
                 @media (min-width: 1500px) {
                     max-width: 1420px;
                 }
