--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -72,8 +72,9 @@
                     }
                 }
             }
-            #wpsl-gmap {
+            #wpsl-result-list {
                 background-color: var(--wp--preset--color--lightgray-2);
+                margin: 0;
             }
         }
     }
