--- a/style.css
+++ b/style.css
@@ -12678,7 +12678,7 @@ body.sticky--header #masthead {
     .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form > div {
       float: none;
       display: flex; }
-.dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-gmap {
+.dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list {
   background-color: var(--wp--preset--color--lightgray-2); }
 
 .swiper-slider-holder .swiper-pagination-holder {
