--- a/style.css
+++ b/style.css
@@ -12679,7 +12679,8 @@ body.sticky--header #masthead {
       float: none;
       display: flex; }
 .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list {
-  background-color: var(--wp--preset--color--lightgray-2); }
+  background-color: var(--wp--preset--color--lightgray-2);
+  margin: 0; }
 
 .swiper-slider-holder .swiper-pagination-holder {
   position: absolute;
