--- a/style.css
+++ b/style.css
@@ -12680,7 +12680,12 @@ body.sticky--header #masthead {
       display: flex; }
 .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list {
   background-color: var(--wp--preset--color--lightgray-2);
-  margin: 0; }
+  margin: 0;
+  padding-top: 40px;
+  padding-bottom: 40px; }
+  .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list #wpsl-stores {
+    max-width: 800px;
+    overflow: auto; }
 
 .swiper-slider-holder .swiper-pagination-holder {
   position: absolute;
