--- a/style.css
+++ b/style.css
@@ -12682,7 +12682,8 @@ body.sticky--header #masthead {
   background-color: var(--wp--preset--color--lightgray-2);
   margin: 0;
   padding-top: 40px;
-  padding-bottom: 40px; }
+  padding-bottom: 40px;
+  width: 33.5%; }
   .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list #wpsl-stores {
     max-width: 800px;
     overflow: auto; }
