--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -82,8 +82,9 @@
                 padding-bottom: 40px;
                 width: 33.5%;
                 #wpsl-stores {
-                    max-width: 800px;
+                    max-height: 800px;
                     overflow: auto;
+                    max-width: 540px;
                 }
             }
         }
