--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -85,6 +85,7 @@
                     max-height: 800px;
                     overflow: auto;
                     max-width: 540px;
+                    margin-left: auto;
                 }
             }
         }
