--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -63,6 +63,7 @@
                     max-width: 1720px;
                 }
                 #wpsl-search-wrap {
+                    margin-bottom: 30px;
                     form {
                         display: flex;
                         align-items: center;
